{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 181,
  "lineage": "5f343150-2bef-f302-9a78-3fc38a39ac7c",
  "resources": [
    {
      "module": "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "module.spk_gwlb_asg_fgt_gwlb_igw.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:364570460639:internet-gateway/igw-0bf926b61938d3868",
            "id": "igw-0bf926b61938d3868",
            "owner_id": "364570460639",
            "tags": {
              "Name": "security-vpc-igw",
              "created_from": "Terraform",
              "purpuse": "ASG_TEST"
            },
            "tags_all": {
              "Name": "security-vpc-igw",
              "created_from": "Terraform",
              "purpuse": "ASG_TEST"
            },
            "vpc_id": "vpc-0498b1a2abdc8ef0f"
          },
          "dependencies": [
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_vpc.vpc",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.data.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "secgrp",
      "provider": "module.spk_gwlb_asg_fgt_gwlb_igw.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "secgrp1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:364570460639:security-group/sg-00d1d3aa1c524d7b4",
            "description": "Security group by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00d1d3aa1c524d7b4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "secgrp1",
            "name_prefix": "",
            "owner_id": "364570460639",
            "revoke_rules_on_delete": false,
            "tags": {
              "created_from": "Terraform",
              "purpuse": "ASG_TEST"
            },
            "tags_all": {
              "created_from": "Terraform",
              "purpuse": "ASG_TEST"
            },
            "timeouts": null,
            "vpc_id": "vpc-0498b1a2abdc8ef0f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_vpc.vpc",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.data.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "module.spk_gwlb_asg_fgt_gwlb_igw.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "fgt_internal_us-east-2a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:364570460639:subnet/subnet-07ff645f251650517",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07ff645f251650517",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "364570460639",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fgt_internal_us-east-2a",
              "created_from": "Terraform",
              "purpuse": "ASG_TEST"
            },
            "tags_all": {
              "Name": "fgt_internal_us-east-2a",
              "created_from": "Terraform",
              "purpuse": "ASG_TEST"
            },
            "vpc_id": "vpc-0498b1a2abdc8ef0f"
          },
          "dependencies": [
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_vpc.vpc",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.data.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "fgt_internal_us-east-2b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:364570460639:subnet/subnet-07b5345c86030f165",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07b5345c86030f165",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "364570460639",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fgt_internal_us-east-2b",
              "created_from": "Terraform",
              "purpuse": "ASG_TEST"
            },
            "tags_all": {
              "Name": "fgt_internal_us-east-2b",
              "created_from": "Terraform",
              "purpuse": "ASG_TEST"
            },
            "vpc_id": "vpc-0498b1a2abdc8ef0f"
          },
          "dependencies": [
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_vpc.vpc",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.data.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "fgt_login_us-east-2a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:364570460639:subnet/subnet-0d17a644faef807fd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d17a644faef807fd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "364570460639",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fgt_login_us-east-2a",
              "created_from": "Terraform",
              "purpuse": "ASG_TEST"
            },
            "tags_all": {
              "Name": "fgt_login_us-east-2a",
              "created_from": "Terraform",
              "purpuse": "ASG_TEST"
            },
            "vpc_id": "vpc-0498b1a2abdc8ef0f"
          },
          "dependencies": [
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_vpc.vpc",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.data.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "fgt_login_us-east-2b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:364570460639:subnet/subnet-0ec17a0ced5313ae4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ec17a0ced5313ae4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "364570460639",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fgt_login_us-east-2b",
              "created_from": "Terraform",
              "purpuse": "ASG_TEST"
            },
            "tags_all": {
              "Name": "fgt_login_us-east-2b",
              "created_from": "Terraform",
              "purpuse": "ASG_TEST"
            },
            "vpc_id": "vpc-0498b1a2abdc8ef0f"
          },
          "dependencies": [
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_vpc.vpc",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.data.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "module.spk_gwlb_asg_fgt_gwlb_igw.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:364570460639:vpc/vpc-0498b1a2abdc8ef0f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01266dd8493112721",
            "default_route_table_id": "rtb-049f5cb2dd922696d",
            "default_security_group_id": "sg-0ff8c803c57eee410",
            "dhcp_options_id": "dopt-b2ad55d9",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0498b1a2abdc8ef0f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-049f5cb2dd922696d",
            "owner_id": "364570460639",
            "tags": {
              "Name": "security-vpc",
              "created_from": "Terraform",
              "purpuse": "ASG_TEST",
              "test_tag": "tgw-test-tag"
            },
            "tags_all": {
              "Name": "security-vpc",
              "created_from": "Terraform",
              "purpuse": "ASG_TEST",
              "test_tag": "tgw-test-tag"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc-gwlb",
      "mode": "data",
      "type": "aws_network_interface",
      "name": "gwlb_intfs",
      "provider": "module.spk_gwlb_asg_fgt_gwlb_igw.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:364570460639:network-interface/eni-06a472773efce1cd8",
            "attachment": [
              {
                "attachment_id": "ela-attach-0c4329aa9579b127d",
                "device_index": 1,
                "instance_owner_id": "amazon-aws"
              }
            ],
            "availability_zone": "us-east-2a",
            "description": "ELB gwy/gwlb-fgt/2cb0df05ac86a1f1",
            "filter": [
              {
                "name": "description",
                "values": [
                  "ELB gwy/gwlb-fgt/*"
                ]
              },
              {
                "name": "interface-type",
                "values": [
                  "gateway_load_balancer"
                ]
              },
              {
                "name": "subnet-id",
                "values": [
                  "subnet-07ff645f251650517"
                ]
              },
              {
                "name": "vpc-id",
                "values": [
                  "vpc-0498b1a2abdc8ef0f"
                ]
              }
            ],
            "id": "eni-06a472773efce1cd8",
            "interface_type": "gateway_load_balancer",
            "mac_address": "02:15:13:43:5d:01",
            "owner_id": "364570460639",
            "private_ip": "10.0.1.135",
            "private_ips": [
              "10.0.1.135"
            ],
            "requester_id": "489998700648",
            "subnet_id": "subnet-07ff645f251650517",
            "vpc_id": "vpc-0498b1a2abdc8ef0f"
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:364570460639:network-interface/eni-0e42ef38d148320ad",
            "attachment": [
              {
                "attachment_id": "ela-attach-007f34ff40144d5ca",
                "device_index": 1,
                "instance_owner_id": "amazon-aws"
              }
            ],
            "availability_zone": "us-east-2b",
            "description": "ELB gwy/gwlb-fgt/2cb0df05ac86a1f1",
            "filter": [
              {
                "name": "description",
                "values": [
                  "ELB gwy/gwlb-fgt/*"
                ]
              },
              {
                "name": "interface-type",
                "values": [
                  "gateway_load_balancer"
                ]
              },
              {
                "name": "subnet-id",
                "values": [
                  "subnet-07b5345c86030f165"
                ]
              },
              {
                "name": "vpc-id",
                "values": [
                  "vpc-0498b1a2abdc8ef0f"
                ]
              }
            ],
            "id": "eni-0e42ef38d148320ad",
            "interface_type": "gateway_load_balancer",
            "mac_address": "06:e4:ce:e7:5c:17",
            "owner_id": "364570460639",
            "private_ip": "10.0.3.210",
            "private_ips": [
              "10.0.3.210"
            ],
            "requester_id": "066548406366",
            "subnet_id": "subnet-07b5345c86030f165",
            "vpc_id": "vpc-0498b1a2abdc8ef0f"
          }
        }
      ]
    },
    {
      "module": "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc-gwlb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "gwlb",
      "provider": "module.spk_gwlb_asg_fgt_gwlb_igw.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:364570460639:loadbalancer/gwy/gwlb-fgt/2cb0df05ac86a1f1",
            "arn_suffix": "gwy/gwlb-fgt/2cb0df05ac86a1f1",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:364570460639:loadbalancer/gwy/gwlb-fgt/2cb0df05ac86a1f1",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "gateway",
            "name": "gwlb-fgt",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-07b5345c86030f165"
              },
              {
                "subnet_id": "subnet-07ff645f251650517"
              }
            ],
            "subnets": [
              "subnet-07b5345c86030f165",
              "subnet-07ff645f251650517"
            ],
            "vpc_id": "vpc-0498b1a2abdc8ef0f"
          },
          "dependencies": [
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_internet_gateway.igw",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_security_group.secgrp",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_subnet.subnets",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_vpc.vpc",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.data.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc-gwlb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "gwlb_ln",
      "provider": "module.spk_gwlb_asg_fgt_gwlb_igw.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:364570460639:listener/gwy/gwlb-fgt/2cb0df05ac86a1f1/aaf8a27bcb37d918",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 0,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:364570460639:targetgroup/gwlb-tgp-fgt/00d5d63e1e3e8f2eae",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:364570460639:listener/gwy/gwlb-fgt/2cb0df05ac86a1f1/aaf8a27bcb37d918",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:364570460639:loadbalancer/gwy/gwlb-fgt/2cb0df05ac86a1f1",
            "port": 0,
            "protocol": "",
            "ssl_policy": "",
            "tags": {
              "Name": "gwlb-ln"
            },
            "tags_all": {
              "Name": "gwlb-ln"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc-gwlb.aws_lb.gwlb",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc-gwlb.aws_lb_target_group.gwlb_tgp",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_internet_gateway.igw",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_security_group.secgrp",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_subnet.subnets",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_vpc.vpc",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.data.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc-gwlb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "gwlb_tgp",
      "provider": "module.spk_gwlb_asg_fgt_gwlb_igw.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:364570460639:targetgroup/gwlb-tgp-fgt/00d5d63e1e3e8f2eae",
            "arn_suffix": "targetgroup/gwlb-tgp-fgt/00d5d63e1e3e8f2eae",
            "connection_termination": false,
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "80",
                "protocol": "TCP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:364570460639:targetgroup/gwlb-tgp-fgt/00d5d63e1e3e8f2eae",
            "lambda_multi_value_headers_enabled": false,
            "name": "gwlb-tgp-fgt",
            "port": 6081,
            "protocol": "GENEVE",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip_dest_ip_proto"
              }
            ],
            "target_failover": [
              {
                "on_deregistration": "no_rebalance",
                "on_unhealthy": "no_rebalance"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0498b1a2abdc8ef0f"
          },
          "dependencies": [
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_internet_gateway.igw",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_security_group.secgrp",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_subnet.subnets",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_vpc.vpc",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.data.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc-gwlb",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "gwlb_endps",
      "provider": "module.spk_gwlb_asg_fgt_gwlb_igw.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "gwlbe-subnet-01aeede137ec1ae68",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:364570460639:vpc-endpoint/vpce-067f88e8ccc00a2c6",
            "id": "vpce-067f88e8ccc00a2c6",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-060943eded29aaf5c"
            ],
            "owner_id": "364570460639",
            "private_dns_enabled": false,
            "requester_managed": false,
            "service_name": "com.amazonaws.vpce.us-east-2.vpce-svc-063b0a49fee33249d",
            "state": "available",
            "subnet_ids": [
              "subnet-01aeede137ec1ae68"
            ],
            "tags": {
              "Name": "gwlbe-subnet-01aeede137ec1ae68"
            },
            "tags_all": {
              "Name": "gwlbe-subnet-01aeede137ec1ae68"
            },
            "vpc_endpoint_type": "GatewayLoadBalancer",
            "vpc_id": "vpc-0d97dffce445211bf"
          },
          "dependencies": [
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc-gwlb.aws_lb.gwlb",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc-gwlb.aws_vpc_endpoint_service.gwlb_ep_service",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_internet_gateway.igw",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_security_group.secgrp",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_subnet.subnets",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_vpc.vpc",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.data.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "gwlbe-subnet-022ce31f94f026553",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:364570460639:vpc-endpoint/vpce-04178894abff9411d",
            "id": "vpce-04178894abff9411d",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0116a4ee0c7c2a887"
            ],
            "owner_id": "364570460639",
            "private_dns_enabled": false,
            "requester_managed": false,
            "service_name": "com.amazonaws.vpce.us-east-2.vpce-svc-063b0a49fee33249d",
            "state": "available",
            "subnet_ids": [
              "subnet-022ce31f94f026553"
            ],
            "tags": {
              "Name": "gwlbe-subnet-022ce31f94f026553"
            },
            "tags_all": {
              "Name": "gwlbe-subnet-022ce31f94f026553"
            },
            "vpc_endpoint_type": "GatewayLoadBalancer",
            "vpc_id": "vpc-0d97dffce445211bf"
          },
          "dependencies": [
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc-gwlb.aws_lb.gwlb",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc-gwlb.aws_vpc_endpoint_service.gwlb_ep_service",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_internet_gateway.igw",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_security_group.secgrp",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_subnet.subnets",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_vpc.vpc",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.data.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.spk_gwlb_asg_fgt_gwlb_igw.module.security_route_table[\"fgt_login\"]",
      "mode": "managed",
      "type": "aws_route",
      "name": "routes",
      "provider": "module.spk_gwlb_asg_fgt_gwlb_igw.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "local_pc",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0bf926b61938d3868",
            "id": "r-rtb-06b6a855754b2a1f31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06b6a855754b2a1f3",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_internet_gateway.igw",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_security_group.secgrp",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_subnet.subnets",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_vpc.vpc",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.data.aws_vpc.vpc",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security_route_table.aws_route_table.rt",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security_route_table.data.aws_route_table.rt"
          ]
        }
      ]
    },
    {
      "module": "module.spk_gwlb_asg_fgt_gwlb_igw.module.security_route_table[\"fgt_login\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "module.spk_gwlb_asg_fgt_gwlb_igw.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:364570460639:route-table/rtb-06b6a855754b2a1f3",
            "id": "rtb-06b6a855754b2a1f3",
            "owner_id": "364570460639",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "fgt_login"
            },
            "tags_all": {
              "Name": "fgt_login"
            },
            "timeouts": null,
            "vpc_id": "vpc-0498b1a2abdc8ef0f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_internet_gateway.igw",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_security_group.secgrp",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_subnet.subnets",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_vpc.vpc",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.data.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.spk_gwlb_asg_fgt_gwlb_igw.module.security_route_table[\"fgt_login\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_a_subnets",
      "provider": "module.spk_gwlb_asg_fgt_gwlb_igw.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00ce7e10bce02d757",
            "route_table_id": "rtb-06b6a855754b2a1f3",
            "subnet_id": "subnet-0d17a644faef807fd"
          },
          "dependencies": [
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_internet_gateway.igw",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_security_group.secgrp",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_subnet.subnets",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_vpc.vpc",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.data.aws_vpc.vpc",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security_route_table.aws_route_table.rt",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security_route_table.data.aws_route_table.rt"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a8dc65ea96691617",
            "route_table_id": "rtb-06b6a855754b2a1f3",
            "subnet_id": "subnet-0ec17a0ced5313ae4"
          },
          "dependencies": [
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_internet_gateway.igw",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_security_group.secgrp",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_subnet.subnets",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_vpc.vpc",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.data.aws_vpc.vpc",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security_route_table.aws_route_table.rt",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security_route_table.data.aws_route_table.rt"
          ]
        }
      ]
    },
    {
      "module": "module.spk_gwlb_asg_fgt_gwlb_igw.module.spkvpc-rt[\"gwlbe_outbound\"]",
      "mode": "managed",
      "type": "aws_route",
      "name": "routes",
      "provider": "module.spk_gwlb_asg_fgt_gwlb_igw.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "az1",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-00065681916a46587",
            "id": "r-rtb-069196194d8a12d591080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-069196194d8a12d59",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc-gwlb.aws_lb.gwlb",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc-gwlb.aws_vpc_endpoint.gwlb_endps",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc-gwlb.aws_vpc_endpoint_service.gwlb_ep_service",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_internet_gateway.igw",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_security_group.secgrp",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_subnet.subnets",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_vpc.vpc",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.data.aws_vpc.vpc",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.spkvpc-rt.aws_route_table.rt",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.spkvpc-rt.data.aws_route_table.rt"
          ]
        }
      ]
    },
    {
      "module": "module.spk_gwlb_asg_fgt_gwlb_igw.module.spkvpc-rt[\"gwlbe_outbound\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "module.spk_gwlb_asg_fgt_gwlb_igw.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:364570460639:route-table/rtb-069196194d8a12d59",
            "id": "rtb-069196194d8a12d59",
            "owner_id": "364570460639",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "gwlbe_outbound"
            },
            "tags_all": {
              "Name": "gwlbe_outbound"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d97dffce445211bf"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.spk_gwlb_asg_fgt_gwlb_igw.module.spkvpc-rt[\"gwlbe_outbound\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_a_subnets",
      "provider": "module.spk_gwlb_asg_fgt_gwlb_igw.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b3848d4be2c2968f",
            "route_table_id": "rtb-069196194d8a12d59",
            "subnet_id": "subnet-022ce31f94f026553"
          },
          "dependencies": [
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.spkvpc-rt.aws_route_table.rt",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.spkvpc-rt.data.aws_route_table.rt"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05fcfd9175c7decb6",
            "route_table_id": "rtb-069196194d8a12d59",
            "subnet_id": "subnet-01aeede137ec1ae68"
          },
          "dependencies": [
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.spkvpc-rt.aws_route_table.rt",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.spkvpc-rt.data.aws_route_table.rt"
          ]
        }
      ]
    },
    {
      "module": "module.spk_gwlb_asg_fgt_gwlb_igw.module.spkvpc-rt[\"igw_inbound\"]",
      "mode": "managed",
      "type": "aws_route",
      "name": "routes",
      "provider": "module.spk_gwlb_asg_fgt_gwlb_igw.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "az1",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.100.3.0/24",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-068315ba81d7a445a1442211147",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-068315ba81d7a445a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "vpce-04178894abff9411d",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc-gwlb.aws_lb.gwlb",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc-gwlb.aws_vpc_endpoint.gwlb_endps",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc-gwlb.aws_vpc_endpoint_service.gwlb_ep_service",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_internet_gateway.igw",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_security_group.secgrp",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_subnet.subnets",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_vpc.vpc",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.data.aws_vpc.vpc",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.spkvpc-rt.aws_route_table.rt",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.spkvpc-rt.data.aws_route_table.rt"
          ]
        },
        {
          "index_key": "az2",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.100.4.0/24",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-068315ba81d7a445a1223906803",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-068315ba81d7a445a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "vpce-067f88e8ccc00a2c6",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc-gwlb.aws_lb.gwlb",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc-gwlb.aws_vpc_endpoint.gwlb_endps",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc-gwlb.aws_vpc_endpoint_service.gwlb_ep_service",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_internet_gateway.igw",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_security_group.secgrp",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_subnet.subnets",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_vpc.vpc",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.data.aws_vpc.vpc",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.spkvpc-rt.aws_route_table.rt",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.spkvpc-rt.data.aws_route_table.rt"
          ]
        }
      ]
    },
    {
      "module": "module.spk_gwlb_asg_fgt_gwlb_igw.module.spkvpc-rt[\"igw_inbound\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "module.spk_gwlb_asg_fgt_gwlb_igw.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:364570460639:route-table/rtb-068315ba81d7a445a",
            "id": "rtb-068315ba81d7a445a",
            "owner_id": "364570460639",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "igw_inbound"
            },
            "tags_all": {
              "Name": "igw_inbound"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d97dffce445211bf"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.spk_gwlb_asg_fgt_gwlb_igw.module.spkvpc-rt[\"igw_inbound\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_a_gateways",
      "provider": "module.spk_gwlb_asg_fgt_gwlb_igw.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "gateway_id": "igw-00065681916a46587",
            "id": "rtbassoc-06e5267297d882587",
            "route_table_id": "rtb-068315ba81d7a445a"
          },
          "dependencies": [
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.spkvpc-rt.aws_route_table.rt",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.spkvpc-rt.data.aws_route_table.rt"
          ]
        }
      ]
    },
    {
      "module": "module.spk_gwlb_asg_fgt_gwlb_igw.module.spkvpc-rt[\"pc_outbound_az1\"]",
      "mode": "managed",
      "type": "aws_route",
      "name": "routes",
      "provider": "module.spk_gwlb_asg_fgt_gwlb_igw.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "az1",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-03ebd2e57b47d37dc1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03ebd2e57b47d37dc",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "vpce-04178894abff9411d",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc-gwlb.aws_lb.gwlb",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc-gwlb.aws_vpc_endpoint.gwlb_endps",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc-gwlb.aws_vpc_endpoint_service.gwlb_ep_service",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_internet_gateway.igw",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_security_group.secgrp",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_subnet.subnets",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_vpc.vpc",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.data.aws_vpc.vpc",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.spkvpc-rt.aws_route_table.rt",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.spkvpc-rt.data.aws_route_table.rt"
          ]
        }
      ]
    },
    {
      "module": "module.spk_gwlb_asg_fgt_gwlb_igw.module.spkvpc-rt[\"pc_outbound_az2\"]",
      "mode": "managed",
      "type": "aws_route",
      "name": "routes",
      "provider": "module.spk_gwlb_asg_fgt_gwlb_igw.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "az1",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0e12034edb5cb0df71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e12034edb5cb0df7",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "vpce-067f88e8ccc00a2c6",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc-gwlb.aws_lb.gwlb",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc-gwlb.aws_vpc_endpoint.gwlb_endps",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc-gwlb.aws_vpc_endpoint_service.gwlb_ep_service",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_internet_gateway.igw",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_security_group.secgrp",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_subnet.subnets",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.aws_vpc.vpc",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.security-vpc.data.aws_vpc.vpc",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.spkvpc-rt.aws_route_table.rt",
            "module.spk_gwlb_asg_fgt_gwlb_igw.module.spkvpc-rt.data.aws_route_table.rt"
          ]
        }
      ]
    }
  ]
}